<resources>
    <string name ="app_name">Café DeVille</string>
    <string name="emailText">Email...</string>
    <string name="passwordText">Password...</string>
    <string name="continueText">Continue as a guest...</string>
    <string name="sign_in_text">Sign in</string>
    <string name="welcomeText">Welcome</string>
    <string name="signupText">Create account</string>
    <string name="signUpText">Sign up...</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading</string>
    <string name="home">Home</string>
    <string name="app_logo">APP LOGO</string>
    <string name="confirm_password">Confirm password...</string>
    <string name="go_back">Go back</string>
    <string name="search">Search...</string>
    <string name="no_result">No result</string>
    <string name="test_text">Americano</string>
    <string name="text_price">5$/ea</string>
    <string name="scan_text">Please scan your table number</string>
    <string name="scan_table">Scan your table number</string>
    <string name="preference_file_key">barcode</string>
    <string name="email_file_key">email</string>
    <string name="your_table_test">table: 1</string>
    <string name="your_table">Your table:</string>
    <string name="table_num">1</string>
    <string name="iced_caff_latte">Iced Caffé Latte</string>
    <string name="coffee_description">Cafe Bonbón was made popular in Valencia, Spain, and spread gradually to the rest of the country. It uses espresso served with sweetened condensed milk in a 1:1 ratio.</string>
    <string name="view_orders">VIEW ORDERS</string>
    <string name="price">Price:</string>
    <string name="price_test">6$/ea</string>
    <string name="quantity_test">0</string>
    <string name="scroll_test_text">THIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXTTHIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT THIS IS A TEST TEXT</string>
    <string name="strength_text">Strength</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="send_code">send code</string>
    <string name="code">Code...</string>
    <string name="change_password">change password</string>
    <string name="back_to_login">Back to login</string>
    <string name="cart_subtotal">Cart subtotal</string>
    <string name="includes_taxes_and_discounts">Includes taxes, and discounts</string>
    <string name="cart_price_test">$17.98</string>
    <string name="proceed_checkout">Proceed to checkout</string>
    <string name="view_cart">VIEW CART</string>
    <string name="cart_empty">Your cart is empty</string>
    <string name="test_total_price">18$</string>
    <string name="test_quantity">Quantity: 3</string>
    <string name="sub_total">Sub total:</string>
    <string name="nope">Ne szórakozz, nyakon baszlak :)</string>
    <string name="rescan">RESCAN</string>
    <string name="preference_token_key">token</string>
    <string name="place_order">place order</string>
    <string name="order_total">Order total</string>
    <string name="checkout_price_test">$27.99</string>
    <string name="pay_with_paypal">Pay with PayPal</string>
    <string name="tokenization_key">sandbox_dw398mmw_czrg5hprsvbkxws3</string>
    <string name="cart">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_empty">You don\'t have favorites</string>
    <string name="scan_code">SCAN CODE</string>
    <string name="invalidBarcode">Your number is invalid, please rescan</string>

</resources>
